--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
 <html>
-<header></header>
-<body>
-    <h1>Hello World!</h1>
-    <div style = "background-color: blue;width:300px;height: 300px;">Hello World!!!</div>
-</body>
+    <header>
+        <link rel="stylesheet" type="text/css" href="../css/main.css">
+    </header>
+    <body>
+        <h1>Hello World!</h1>
+        <div>
+            <h1>Test Div</h1>
+        </div>
+    </body>
 </html>
