new align style(DON'T CARE COLORS)

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -55,7 +55,33 @@
             </div>
             <div role="outside_con" class="todo_main">
                 <div role="listbox" class="todo_main_con">
-                    
+                    <div role="calendar_row" class="todo_main_row">
+                        <div class="todo_column">
+                            <div style="background-color: aqua; height: 100px;"></div>
+                            <div style="background-color: rgb(238, 255, 0); height: 300px;"></div>
+                            <div style="background-color: rgb(68, 0, 255); height: 200px;"></div>
+                            <div style="background-color: rgb(255, 0, 212); height: 400px;"></div>
+                        </div>
+                        <div class="todo_column">
+                            <div style="background-color: rgb(255, 174, 0); height: 200px;"></div>
+                            <div style="background-color: rgb(51, 255, 0); height: 100px;"></div>
+                            <div style="background-color: rgb(255, 60, 0); height: 200px;"></div>
+                            <div style="background-color: rgb(255, 0, 0); height: 400px;"></div> 
+                        </div>
+                        <div class="todo_column">
+                            <div style="background-color: aqua; height: 100px;"></div>
+                            <div style="background-color: rgb(238, 255, 0); height: 300px;"></div>
+                            <div style="background-color: rgb(68, 0, 255); height: 200px;"></div>
+                            <div style="background-color: rgb(255, 0, 212); height: 400px;"></div>
+                        </div>
+                        <div class="todo_column">
+                            <div style="background-color: rgb(255, 174, 0); height: 200px;"></div>
+                            <div style="background-color: rgb(51, 255, 0); height: 100px;"></div>
+                            <div style="background-color: rgb(255, 60, 0); height: 200px;"></div>
+                            <div style="background-color: rgb(255, 0, 0); height: 400px;"></div> 
+                        </div>
+
+                    </div>
                 </div>
             </div>
             
