--- a/src/html/index.html
+++ b/src/html/index.html
@@ -54,10 +54,10 @@
                 </li>
             </ol>
         </div>
-        <div role="outside_con" class="todo_main">
-            <div role="listbox" class="todo_main_con" id="main_calendar">
-                <div role="calendar_col" class="todo_main_col" id="todo_main_col">
-                   <div class="reminder_con">Hello<br>Hello</div>
+        <div class="todo_con_outside">
+            <div class="todo_con_inside">
+                <div class = "reminder_con">
+                    
                 </div>
             </div>
         </div>
