--- a/src/html/index.html
+++ b/src/html/index.html
@@ -57,7 +57,15 @@
         <div class="todo_con_outside">
             <div class="todo_con_inside">
                 <div class = "reminder_con">
-                    
+                    <div class="reminder_check_mark_con"> 
+                        <div class="check_mark_outside">
+                            <div class="check_mark_inside">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/></svg>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="reminder_detail_con"></div>
+
                 </div>
             </div>
         </div>
