--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,7 @@
 </header>
 
 <body>
+    <div> </div>
     <div class="header_wrapper" role="main_header">
         <span class="logo_container" id="app_logo" role="logo_container">
                 <i class="far fa-calendar-alt"></i>      
