--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,7 +42,7 @@
             <div role="figure" class="user_s_profile">
                 <div role="info_box" class="user_info_setting">
                     <div><i class="fas fa-user-circle"></i></div>
-                    <div>USER NAME</div>
+                    <div id="userui">USER NAME</div>
                 </div>
             </div>
             <ol class="menu_buttons">
