--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,7 @@
  
             <p id="image_logo"><img src=""></p>
          
-            <form method="post" action="login.js">
+            <form method="post">
          
                 <p><label class="label_input">USERNAME</label><input type="text" id="username" class="text_field" value="admin"/></p>
                 <p><label class="label_input">PASSWORD</label><input type="text" id="password" class="text_field" value="123456"/></p>
@@ -88,6 +88,15 @@
             </div>
         </div>
 
+    </div >
+    <div id="add" >
+        <button id="nv_button" onclick="window.location='../html/newevent.html';">
+        <img 
+        src="../img/round-add-button.svg" 
+        alt="triangle with all three sides equal"
+        height="65"
+        width="65" />
+    </button >
     </div>
 </body>
 <script src="../js/main.js"></script>
