--- a/src/html/index.html
+++ b/src/html/index.html
@@ -68,7 +68,7 @@
                     <button class="menu_button">
                             <div class="menu_button_icon"><img src="../img/canvas_sized_0.svg" id="canvas_logo"></div>
                             <div class="menu_button_content">
-                                CANVAS
+                                GOOGLE
                             </div>
                         </button>
                 </li>
@@ -89,15 +89,7 @@
         </div>
 
     </div >
-    <div id="add" >
-        <button id="nv_button" onclick="window.location='../html/newevent.html';">
-        <img 
-        src="../img/round-add-button.svg" 
-        alt="triangle with all three sides equal"
-        height="65"
-        width="65" />
-    </button >
-    </div>
+
 </body>
 <script src="../js/index.js"></script>
 </html>
